# hello-tf

./: .gitignore  Cargo.toml  TODO.md  doc.dio  rustfmt.toml
hello3/: pubspec.yaml
hello3/android/app/: build.gradle
hello3/android/app/src/main/: AndroidManifest.xml
hello3/ios/Runner.xcodeproj/: project.pbxproj
hello3/lib/: main.dart
hello3/test/: widget_test.dart
hello3/web/: index.html
proto/: infer.proto
public/: index.html  infer_grpc_web_pb.js  infer_pb.js  main.js
pys/: gen_model.py  infer_client.py  infer_local.py  infer_pb2.py  infer_pb2_grpc.py  pre_and_post_process_server.py  process_server.py  request
src/: infer.rs
templates/: upload.html
