[package]
edition = "2021"
name = "hello-tf"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
hyper = "0.14"
prost = "0.9"
tensorflow = "0.17"
tokio = {version = "1.12", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
