[package]
edition = "2021"
name = "hello-tf"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
hyper = "0.14"
prost = "0.9"
tensorflow = "0.17"
tokio = {version = "1.12", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.6"

axum = {git = "https://github.com/tokio-rs/axum", features=["multipart"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.1", features = ["trace" ] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.6"
