[package]
edition = "2021"
name = "hello-tf"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
prost = "0.9"
tensorflow = "0.17"
tokio = {version = "1.12", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.6"

axum = {git = "https://github.com/tokio-rs/axum", features=["multipart"]}
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.1", features = ["full" ] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-web = "0.2"
http = "0.2"
http-body = "0.4.2"
hyper = {version = "0.14", features = ["full"]}
futures = "*"
tower = "*"

warp = "*"

[build-dependencies]
tonic-build = "0.6"
